sunnyside-agency-landing-page-main/styles.css
@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@600&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Fraunces:wght@700;900&display=swap");

:root {
  /* Primary Colors */
  --Soft-red: hsl(7, 99%, 70%);
  --Yellow: hsl(51, 100%, 49%);
  --Dark-desaturated-cyan: hsl(167, 40%, 24%);
  --Dark-blue: hsl(198, 62%, 26%);
  --Dark-moderate-cyan: hsl(168, 42%, 63%);

  /* Neutral colors */
  --Very-dark-desaturated-blue: hsl(212, 27%, 19%);
  --Very-dark-grayish-blue: hsl(213, 9%, 39%);
  --Dark-grayish-blue: hsl(232, 10%, 55%);
  --Grayish-blue: hsl(210, 4%, 67%);
  --White: hsl(0, 0%, 100%);

  /* Fonts */
  --paragraph-font-family: "Barlow", sans-serif;
  --header-font-family: "Fraunces", sans-serif;
}

.attribution {
  font-size: 11px;
  text-align: center;
  margin-top: 20px;
}
.attribution a {
  color: hsl(228, 45%, 44%);
}

*,
*::before,
*::after {
  margin: 0;
  box-sizing: border-box;
}

body {
  margin: 0 auto;
  font-size: 1.125rem;
}

h1 {
  color: hsl(0, 0%, 100%);
  font-family: var(--header-font-family);
  font-weight: 900;
  text-transform: uppercase;
  letter-spacing: 7px;
  text-align: center;
}

h2 {
  color: var(--Very-dark-desaturated-blue);
  font-family: var(--header-font-family);
  font-weight: 900;
  text-align: center;
  margin-bottom: 1.5rem;
}

.textBox a {
  color: var(--Very-dark-desaturated-blue);
  font-family: var(--header-font-family);
  font-weight: 900;
  text-align: center;
  margin-top: 2rem;
  width: 150px;
  position: relative;
  text-transform: uppercase;
}

.textBox > a::after {
  content: "";
  position: absolute;
  width: 85%;
  border-bottom: 8px solid var(--Yellow);
  left: 10px;
  bottom: 0;
  z-index: -1;
  border-radius: 5px;
  opacity: 0.3;
}

.textBox > a:hover::before {
  opacity: 0.8;
}

.textBox > .pinkLink::after {
  border-bottom: 8px solid var(--Soft-red);
}

p {
  font-family: var(--paragraph-font-family);
  color: var(--Grayish-blue);
  text-align: center;
  line-height: 1.8rem;
}

header {
  background-image: url(./images/mobile/image-header.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  padding: 1rem 1.5rem 20rem;
  width: 100%;
}

.navigationContainer {
  display: flex;
  justify-content: space-between;
  padding: 1rem;
}

.navbar-right ul li a:hover {
  color: black;
  font-family: "Fraunces", sans-serif;
  text-transform: uppercase;
  padding: 10px;
  text-align: center;
  border-radius: 30px;
  background-color: hsl(0, 0%, 100%);
}

a {
  text-decoration: none;
}

nav li a {
  color: var(--White);
  font-size: 0.7rem;
}
li {
  list-style: none;
  display: inline-block;
}

.headerText {
  margin-top: 2rem;
  display: flex;
  align-items: center;
  flex-direction: column;
  line-height: 5vh;
  text-align: center;
}

.textBox {
  display: flex;
  flex-direction: column;
  padding: 5rem;
  align-items: center;
  width: 100%;
}
.eggContainer,
.pinkContainer {
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  padding: 1rem 1.5rem 30rem;
  max-width: 100%;
}
.pinkContainer {
  background-image: url("./images/mobile/image-stand-out.jpg");
}
.eggContainer {
  background-image: url("./images/mobile/image-transform.jpg");
}
.textboxGreen {
  background-image: url(images/mobile/image-graphic-design.jpg);
  background-repeat: no-repeat;
  padding: 5rem;
  background-size: cover;
  background-position: center;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.textboxGreen h2,
.textboxGreen p {
  color: var(--Dark-desaturated-cyan);
}

.textWrapper {
  margin: 15rem 0 1rem;
}

.textboxBlue {
  background-image: url(images/mobile/image-photography.jpg);
  background-repeat: no-repeat;
  padding: 5rem;
  background-size: cover;
  background-position: center;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.textboxBlue p,
.textboxBlue h2 {
  color: var(--Dark-blue);
}

.testimonialsBox {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 3rem;
}

h3 {
  color: var(--Grayish-blue);
  text-transform: uppercase;
  margin-top: 2rem;
  letter-spacing: 4px;
  text-align: center;
  font-family: var(--header-font-family);
}

.clientBoxes {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 2rem;
}
.clientBoxes p {
  color: var(--Dark-blue);
  margin-bottom: 15px;
}
.clientImg {
  display: block;
  margin: 50px;
  border-radius: 50%;
  max-width: 100;
}

.clientBoxes p:nth-last-of-type(1) {
  color: var(--Grayish-blue);
}

.clientBoxes p:nth-last-of-type(2) {
  color: var(--Very-dark-desaturated-blue);
  font-family: var(--header-font-family);
  margin-bottom: 5px;
}

.pictureWrapper {
  display: grid;
  grid-template-columns: 1fr 1fr;
  width: 100vw;
  gap: 0;
  margin: 0;
}
.pictureBox img {
  width: 100%;
  height: 100%;
}

footer {
  background-color: var(--Dark-moderate-cyan);
  padding: 3rem;
}

.footerWrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.logoContainer {
  margin-bottom: 30px;
}

.logoContainer img {
  min-width: 12rem;
}

.informationContainer ul {
  display: flex;
  gap: 3rem;
  margin-bottom: 50px;
  margin-right: 30px;
}
.iconsContainer ul {
  display: flex;
  gap: 3rem;
  margin-right: 1.5rem;
  margin-bottom: 1rem;
}

footer a {
  color: var(--Dark-desaturated-cyan);
  font-family: var(--paragraph-font-family);
}

/* Media queries to change images to deskptop versions */
@media (min-width: 1000px) {
  header {
    background-image: url(./images/desktop/image-header.jpg);
  }
  .textboxGreen {
    background-image: url(images/desktop/image-graphic-design.jpg);
  }
  .textboxBlue {
    background-image: url(images/desktop/image-photography.jpg);
  }
}

/* Layout Queries */

@media (min-width: 1000px) {
  .pictureWrapper {
    grid-template-columns: 1fr 1fr 1fr 1fr;
  }
  .testimonialsBox {
    flex-direction: row;
  }

  .container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-auto-flow: dense;
  }
  .brandBox {
    grid-row: 1;
  }
}

